fix(main): .content__list-container | Поменял overflow-y на auto

--- a/styles/style.css
+++ b/styles/style.css
@@ -239,7 +239,7 @@ ol {
 
 .content__list-container {
   position: relative;
-  overflow-y: scroll;
+  overflow-y: auto;
   height: 298px;
 }
 
